[package]
name = "iota"
version = "0.2.2"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Related constants: 1 << iota"
documentation = "https://docs.rs/iota/"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/iota"
rust-version = "1.31"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
